[project]
name = "monawhat"
version = "0.1.1"
description = "A modern, fully type-hinted, and comprehensively tested monad library for Python 3.11+."
readme = "README.md"
authors = [{ name = "DirtyVader", email = "contact@crad-vador.net" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "nox>=2025.5.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-rich>=0.2.0",
    "ruff>=0.11.9",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
namespace_packages = false
explicit_package_bases = false
mypy_path = ["src/", "packages/"]
exclude = ["scripts", "docs", "tests", ".venv"]
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.uv]
cache-dir = "./.uv-cache"

[tool.ruff.lint]
extend-select = ["UP", "D", "PL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = ["ignore::RuntimeWarning:coroutine '.*' was never awaited"]


[tool.uv.workspace]
members = ["packages/*"]
